Lab 2 payload cleanup: keep only working CommonsCollections4 payload, update documentation